# manylabels

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/_static/: manylabels_collage.psd
src/manylabels/: __init__.py  _manylabels.py
test/: test_manylabels.py
